Simplified Collectors.toList() to .toList()